# content-core

./: .env.example  .gitignore  README.md  alembic.ini  content_core.db  mcp_server.py  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_phase5.py  0003_feedback.py
content_core/: __init__.py  agents.py  approvals.py  feedback.py  notion_connect.py  originality_injector.py  rag.py  registry.py  retry.py  telemetry.py  workflow.py
content_core/api/: app.py
content_core/db/: __init__.py  models.py  models_phase5.py  models_phase6.py
content_core/eval/: __init__.py  registry.py  runner.py  scorers.py
content_core/llm/: __init__.py  provider.py
deploy/: DEPLOY.md  api.Dockerfile  docker-compose.yml
docs/adr/: 0001-persistence-sqlite-first.md  0002-background-jobs-without-celery.md  0003-observability-scope.md  0004-auth-api-key.md  0005-keep-custom-llm-abstraction.md  0006-keep-director-over-langgraph.md  0007-no-redis-cache.md  0008-minimal-plugin-registry.md  0009-llm-as-judge.md  0010-closed-loop-feedback.md
tests/: test_agents.py  test_db_api.py  test_eval.py  test_eval_api.py  test_feedback.py  test_feedback_api.py  test_llm_provider.py  test_rag.py  test_retry_workflow.py
