[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "content-core"
version = "0.3.0"
description = "Shared core for the AI content-automation pipelines: LLM provider abstraction, Notion perspective bank, and originality injection."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "moneymadeclear52-design" }]
dependencies = [
    "anthropic>=0.25.0",
    "notion-client>=2.2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
openai = ["openai>=1.30.0"]
gemini = ["google-generativeai>=0.7.0"]
rag = ["sentence-transformers>=2.7.0", "numpy>=1.26"]
mcp = ["mcp[cli]>=1.2.0"]
dev = ["pytest>=8.0.0", "pytest-mock>=3.12.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["content_core*"]
